--- a/css/mycss.css
+++ b/css/mycss.css
@@ -181,22 +181,39 @@
 }
 .tabs_area ul li {
 	width: 19%;
-	display: inline-flex;
-	margin-right: 10px;
+	    float: left;
+	margin-right: 10px !important;
 }
+.tabs_area ul li {
+	width: 19.3%;
+	    float: left;
+	margin-right: 10px !important;
+}
+
 .tabs_area ul li:last-child {
 	margin-right: 0px;
 }
 .tab_name_area {
-	height: 100px;
-!important;
-	margin: 20px;
+	height: 200px !important;
+    width:100%;
+}
+
+.tab_wrapper{
+    display:table !important;
+}
+.tabs_area .pad0{
+        margin-right: 0px !important;
+}
+.tab_name_area{
+ display:table-cell !important;
+text-align:center;
+vertical-align:middle;
 }
 .tab_name_area h1 {
 	color: #fff;
 	font-size: 25px;
 	text-align: center;
-	padding-top: 30px;
+	
 }
 .tab_link_area {
 	text-align: center;
@@ -205,19 +222,19 @@
 	background: rgba(0, 0, 0, 0.1);
 }
 .first_tab {
-	background-color: #00c0ef !important
+	background-color: #366f7d  !important
 }
 .second_tab {
-	background-color: #f39c12 !important
+	background-color: #565554  !important
 }
 .third_tab {
-	background-color: #00a65a !important
+	background-color: #332222  !important
 }
 .fourth_tab {
-	background-color: #dd4b39 !important
+	background-color: #565554    !important
 }
 .fifth_tab {
-	background-color: #FF33CC !important
+	background-color: #366f7d  !important
 }
 .bopoking_hedaing h1 {
 	font-size: 22px;
@@ -247,6 +264,21 @@ label {
     box-shadow: none !important;
 
 }
+/*======= Sanjoy 9/4/18 =======*/
+.help_btn1{
+    padding-top:2px;
+}
+#age_dropdown_div select{
+    margin-bottom:5px;
+}
+.wrapper-padding button{
+    
+position:fixed;
+bottom:20px;
+right:20px;
+}
+
+/*==============================*/
 .wizard {
     margin: 0px auto 20px auto;
     background: none;
@@ -326,6 +358,9 @@ label {
 width:100%;
 }
 /*=====================*/
+
+
+
 /*============================================*/
 
 
